--- a/application/templates/404.html
+++ b/application/templates/404.html
@@ -5,6 +5,6 @@
 {% block content %}
 
   <h2>Oops! Looks like the page doesn't exist anymore</h2>
-  <a href="/"><p>Click Here</a>To go to the Home Page</p>
+  <a href="/">Click Here</a><p>To go to the Home Page</p>
 
 {% endblock %}
